Fixes #4334 - Word wrap in Knowledge Base with tables from mobile view perspective

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -12358,7 +12358,7 @@ output {
     span,
     p,
     a {
-      word-break: break-all;
+      overflow-wrap: anywhere;
     }
   }
 
